--- a/site/media/css/start-style.css
+++ b/site/media/css/start-style.css
@@ -1,317 +1,290 @@
-/*! updated 2016-12-28 */
-
-@font-face {
-    font-family: 'Open Sans Light';
-    font-weight: 400;
-    font-style: normal;
-    src: url("/media/fonts/opensans-light.woff2") format('woff2'), url("/media/fonts/opensans-light.woff") format('woff')
-}
-@font-face {
-    font-family: 'Open Sans Light';
-    font-weight: 700;
-    font-style: normal;
-    src: url("/media/fonts/opensans-semibold.woff2") format('woff2'), url("/media/fonts/opensans-semibold.woff") format('woff')
-}
-@font-face {
-    font-family: 'Open Sans Light';
-    font-weight: 400;
-    font-style: italic;
-    src: url("/media/fonts/opensans-lightitalic.woff2") format('woff2'), url("/media/fonts/opensans-lightitalic.woff") format('woff')
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: 400;
-    font-style: normal;
-    src: url("/media/fonts/opensans-regular.woff2") format('woff2'), url("/media/fonts/opensans-regular.woff") format('woff')
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: 700;
-    font-style: normal;
-    src: url("/media/fonts/opensans-bold.woff2") format('woff2'), url("/media/fonts/opensans-bold.woff") format('woff')
-}
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: 400;
-    font-style: italic;
-    src: url("/media/fonts/opensans-italic.woff2") format('woff2'), url("/media/fonts/opensans-italic.woff") format('woff')
-}
+/****************************************************************************/
+/****************************************************************************/
 html {
-    color: #333;
-    font-size: 14px;
-    line-height: 1.5;
-    font-family: 'Open Sans', X-LocaleSpecific, sans-serif
+  color: #333;
+  font-size: 14px;
+  line-height: 1.5;
+  font-family: 'Open Sans', X-LocaleSpecific, sans-serif;
 }
 body {
-    margin: 1.5rem;
-    background: url("/media/img/sandstone/bg-gradient-sky.png") repeat-x, url("/media/img/sandstone/grain.png") repeat, #eee
+  margin: 1.5rem;
+  background: url('/media/img/sandstone/bg-gradient-sky.png') repeat-x, url('/media/img/sandstone/grain.png') repeat, #EEE;
 }
 a {
-    color: #0096dd;
-    text-decoration: none
+  color: #0096dd;
+  text-decoration: none;
 }
-a:active,
+a:hover,
 a:focus,
-a:hover {
-    color: #00539f;
-    text-decoration: underline
+a:active {
+  color: #00539f;
+  text-decoration: underline;
 }
 h1,
 h2 {
-    margin: 0;
-    font-family: 'Open Sans Light', X-LocaleSpecific-Light, 'Open Sans', X-LocaleSpecific, sans-serif;
-    font-weight: 400
+  margin: 0;
+  font-family: 'Open Sans Light', X-LocaleSpecific-Light, 'Open Sans', X-LocaleSpecific, sans-serif;
+  font-weight: normal;
 }
 main {
-    position: relative;
-    overflow: hidden
+  position: relative;
+  overflow: hidden;
 }
-footer,
 header,
-section {
-    box-sizing: padding-box;
-    margin-top: 1.5rem;
-    padding: 0 1.5rem
+section,
+footer {
+  box-sizing: padding-box;
+  margin-top: 1.5rem;
+  padding: 0 1.5rem;
 }
 header h1,
 section h2.iconic {
-    position: relative
+  position: relative;
 }
 header h1:before,
 section h2.iconic:before {
-    display: block;
-    position: absolute;
-    top: 0;
-    background-repeat: no-repeat;
-    content: ''
+  display: block;
+  position: absolute;
+  top: 0;
+  background-repeat: no-repeat;
+  content: '';
 }
 header h1:before {
-    background-image: url("/media/img/thunderbird/logos/release-100.png")
+  background-image: url('/media/img/thunderbird/logos/release-100.png');
 }
-html[data-channel=earlybird] header h1:before {
-    background-image: url("/media/img/thunderbird/logos/earlybird-100.png")
+html[data-channel="earlybird"] header h1:before {
+  background-image: url('/media/img/thunderbird/logos/earlybird-100.png');
 }
-html[data-channel=daily] header h1:before {
-    background-image: url("/media/img/thunderbird/logos/daily-100.png")
+html[data-channel="daily"] header h1:before {
+  background-image: url('/media/img/thunderbird/logos/daily-100.png');
 }
 section h2.iconic:before {
-    background-image: url("/media/img/thunderbird/start/sprite.png")
+  background-image: url('/media/img/thunderbird/start/sprite.png');
 }
 footer a {
-    display: inline-block;
-    -moz-padding-start: 25px;
-    padding-inline-start: 25px
+  display: inline-block;
+  -moz-padding-start: 25px;
+  /* Legacy */
+  padding-inline-start: 25px;
+  /* Gecko 41+ */
 }
 footer a:before {
-    -moz-margin-start: -25px;
-    margin-inline-start: -25px
+  -moz-margin-start: -25px;
+  /* Legacy */
+  margin-inline-start: -25px;
+  /* Gecko 41+ */
 }
 footer a:before,
 section a.iconic:before {
-    display: inline-block;
-    -moz-margin-end: 5px;
-    margin-inline-end: 5px;
-    width: 20px;
-    height: 20px;
-    background-image: url("/media/img/thunderbird/start/sprite.png");
-    background-repeat: no-repeat;
-    vertical-align: text-bottom;
-    content: ''
+  display: inline-block;
+  -moz-margin-end: 5px;
+  /* Legacy */
+  margin-inline-end: 5px;
+  /* Gecko 41+ */
+  width: 20px;
+  height: 20px;
+  background-image: url('/media/img/thunderbird/start/sprite.png');
+  background-repeat: no-repeat;
+  vertical-align: text-bottom;
+  content: '';
 }
 header h1 {
-    box-sizing: padding-box;
-    font-size: 1.25rem;
-    line-height: 1
+  box-sizing: padding-box;
+  font-size: 1.25rem;
+  line-height: 1;
 }
 header h1:before {
-    height: 100px
+  height: 100px;
 }
 header h1 span {
-    display: block;
-    color: #2666a6;
-    font-size: 3rem;
-    letter-spacing: -.06ex
+  display: block;
+  color: #2666A6;
+  font-size: 3rem;
+  letter-spacing: -0.06ex;
 }
 section h2 {
-    font-size: 1.25rem;
-    line-height: 1.3
+  font-size: 1.25rem;
+  line-height: 1.3;
 }
 section h2.iconic {
-    display: table-cell;
-    -moz-padding-start: 55px;
-    padding-inline-start: 55px;
-    height: 50px;
-    vertical-align: middle
+  display: table-cell;
+  -moz-padding-start: 55px;
+  /* Legacy */
+  padding-inline-start: 55px;
+  /* Gecko 41+ */
+  height: 50px;
+  vertical-align: middle;
 }
 section h2:before {
-    width: 50px;
-    height: 50px
+  width: 50px;
+  height: 50px;
 }
 section.tip h2:before {
-    background-position: 0 0
+  background-position: 0 0;
 }
 section.addons h2:before {
-    background-position: -50px 0
+  background-position: -50px 0;
 }
 section.help h2:before {
-    background-position: 0 -50px
+  background-position: 0 -50px;
 }
 section.blog h2:before {
-    background-position: -50px -50px
+  background-position: -50px -50px;
 }
 section p {
-    margin: .7em 0 0
+  margin: .7em 0 0;
 }
-section a[href$=Contributing]:before {
-    background-position: -40px -100px
+section a[href$="Contributing"]:before {
+  background-position: -40px -100px;
 }
 section a.more:after {
-    content: "\00A0\00BB";
-    white-space: nowrap
+  content: "\00A0\00BB";
+  /* nbsp raquo */
+  white-space: nowrap;
 }
 footer ul {
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    list-style-type: none
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 footer li {
-    box-sizing: padding-box;
-    padding-bottom: .5rem
+  box-sizing: padding-box;
+  padding-bottom: .5rem;
 }
-footer a[href*=features]:before {
-    background-position: 0 -100px
+footer a[href*="features"]:before {
+  background-position: 0 -100px;
 }
-footer a[href*=blog]:before {
-    background-position: -20px -100px
+footer a[href*="blog"]:before {
+  background-position: -20px -100px;
 }
-footer a[href*=donate]:before {
-    background-position: -40px -100px
+footer a[href*="donate"]:before {
+  background-position: -40px -100px;
 }
-footer a[href*=Contributing]:before {
-    background-position: -40px -100px
+footer a[href*="Contributing"]:before {
+  background-position: -40px -100px;
 }
-footer a[href*=addons]:before {
-    background-position: -20px -120px
+footer a[href*="addons"]:before {
+  background-position: -20px -120px;
 }
-footer a[href*=support]:before {
-    background-position: -40px -120px
+footer a[href*="support"]:before {
+  background-position: -40px -120px;
 }
-footer a[href*=how]:before {
-    background-position: 0 -120px
+footer a[href*="how"]:before {
+  background-position: 0 -120px;
 }
-[dir=ltr] header h1:before,
-[dir=ltr] section h2.iconic:before {
-    left: 0
+[dir="ltr"] header h1:before,
+[dir="ltr"] section h2.iconic:before {
+  left: 0;
 }
-[dir=rtl] header h1:before,
-[dir=rtl] section h2.iconic:before {
-    right: 0
+[dir="rtl"] header h1:before,
+[dir="rtl"] section h2.iconic:before {
+  right: 0;
 }
 @media (min-width: 1024px) {
-    footer li {
-        width: 50%;
-        min-width: 10em
-    }
-    [lang|=en] footer li {
-        width: 33%
-    }
+  footer li {
+    width: 50%;
+    min-width: 10em;
+  }
+  [lang|="en"] footer li {
+    width: 33%;
+  }
 }
 @media (min-width: 800px) and (max-width: 1023px) {
-    footer li {
-        width: 50%
-    }
+  footer li {
+    width: 50%;
+  }
 }
 @media (min-width: 800px) {
-    main>div,
-    main>footer,
-    main>header {
-        width: 50%
-    }
-    [dir=ltr] main>div:last-of-type,
-    [dir=ltr] main>footer,
-    [dir=ltr] main>footer li,
-    [dir=ltr] main>header {
-        float: left
-    }
-    [dir=ltr] main>div:first-of-type {
-        float: right
-    }
-    [dir=rtl] main>div:last-of-type,
-    [dir=rtl] main>footer,
-    [dir=rtl] main>footer li,
-    [dir=rtl] main>header {
-        float: right
-    }
-    [dir=rtl] main>div:first-of-type {
-        float: left
-    }
+  main > header,
+  main > div,
+  main > footer {
+    width: 50%;
+  }
+  [dir="ltr"] main > header,
+  [dir="ltr"] main > div:last-of-type,
+  [dir="ltr"] main > footer,
+  [dir="ltr"] main > footer li {
+    float: left;
+  }
+  [dir="ltr"] main > div:first-of-type {
+    float: right;
+  }
+  [dir="rtl"] main > header,
+  [dir="rtl"] main > div:last-of-type,
+  [dir="rtl"] main > footer,
+  [dir="rtl"] main > footer li {
+    float: right;
+  }
+  [dir="rtl"] main > div:first-of-type {
+    float: left;
+  }
 }
 @media (min-width: 640px) and (max-width: 799px) {
-    header,
-    section {
-        width: 70%
-    }
-    footer {
-        position: absolute;
-        top: 120px;
-        width: 30%
-    }
-    [dir=ltr] footer {
-        right: 0
-    }
-    [dir=rtl] footer {
-        left: 0
-    }
+  header,
+  section {
+    width: 70%;
+  }
+  footer {
+    position: absolute;
+    top: 120px;
+    width: 30%;
+  }
+  [dir="ltr"] footer {
+    right: 0;
+  }
+  [dir="rtl"] footer {
+    left: 0;
+  }
 }
 @media (min-width: 480px) and (max-width: 639px) {
-    footer li {
-        width: 50%;
-        min-width: 10em
-    }
-    [lang|=en] footer li {
-        width: 33%
-    }
-    [dir=ltr] footer li {
-        float: left
-    }
-    [dir=rtl] footer li {
-        float: right
-    }
+  footer li {
+    width: 50%;
+    min-width: 10em;
+  }
+  [lang|="en"] footer li {
+    width: 33%;
+  }
+  [dir="ltr"] footer li {
+    float: left;
+  }
+  [dir="rtl"] footer li {
+    float: right;
+  }
 }
 @media (min-width: 480px) {
-    header h1 {
-        display: table-cell;
-        -moz-padding-start: 110px;
-        padding-inline-start: 110px;
-        height: 100px;
-        vertical-align: middle
-    }
-    header h1:before {
-        width: 100px
-    }
+  header h1 {
+    display: table-cell;
+    -moz-padding-start: 110px;
+    /* Legacy */
+    padding-inline-start: 110px;
+    /* Gecko 41+ */
+    height: 100px;
+    vertical-align: middle;
+  }
+  header h1:before {
+    width: 100px;
+  }
 }
 @media (max-width: 479px) {
-    header h1 {
-        padding-top: 110px;
-        text-align: center
-    }
-    header h1:before {
-        width: 100%;
-        background-position: center top
-    }
+  header h1 {
+    padding-top: 110px;
+    text-align: center;
+  }
+  header h1:before {
+    width: 100%;
+    background-position: center top;
+  }
 }
-@media (-webkit-min-device-pixel-ratio: 1.5),
-(min-resolution: 1.5dppx),
-(min-resolution: 144dpi) {
-    header h1:before {
-        background-image: url("/media/img/thunderbird/logos/release-200.png");
-        background-size: 100px 100px
-    }
-    html[data-channel=earlybird] header h1:before {
-        background-image: url("/media/img/thunderbird/logos/earlybird-200.png")
-    }
-    html[data-channel=daily] header h1:before {
-        background-image: url("/media/img/thunderbird/logos/daily-200.png")
-    }
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 1.5dppx), (min-resolution: 144dpi) {
+  header h1:before {
+    background-image: url('/media/img/thunderbird/logos/release-200.png');
+    background-size: 100px 100px;
+  }
+  html[data-channel="earlybird"] header h1:before {
+    background-image: url('/media/img/thunderbird/logos/earlybird-200.png');
+  }
+  html[data-channel="daily"] header h1:before {
+    background-image: url('/media/img/thunderbird/logos/daily-200.png');
+  }
 }
