--- a/thunderbird.net/media/css/thunderbird-landing.css
+++ b/thunderbird.net/media/css/thunderbird-landing.css
@@ -1,1 +1,121 @@
-#nav-main-menu{display:inline-block;*display:inline;*zoom:1;margin:0}#nav-main-menu li{position:relative}#nav-main-menu li.hover a{outline:0}#nav-main-menu li.hover a[aria-haspopup=true]{background-image:url("/media/img/sandstone/menu-point.0d5a3b9e32e1.png");background-repeat:no-repeat;background-position:center 2.75em}#masthead nav .sublink{text-transform:none}.js #nav-main li.hover .submenu{left:0;opacity:1;-moz-transition:opacity .2s ease-in-out;-webkit-transition:opacity .2s ease-in-out;transition:opacity .2s ease-in-out}#nav-main .submenu,#nav-main .submenu li{height:auto;border:0;float:none;display:block}#nav-main .submenu{position:absolute;z-index:100;left:-999em;top:43px;opacity:0;width:190px;text-shadow:1px 1px 0 #fff,0 0 5px #fff;background:#fff;padding:1px 0;border-bottom:1px solid #ddd}#nav-main .submenu li,#nav-main .submenu li.hover{background-image:none}#nav-main .submenu li a,#nav-main .submenu li a:link,#nav-main .submenu li a:visited,#nav-main .submenu li span,#nav-main .submenu li.hover a,#nav-main .submenu li.hover a:link,#nav-main .submenu li.hover a:visited,#nav-main .submenu li.hover span{overflow:hidden;padding:7px 10px;margin:0;height:auto;float:none;display:block;font-size:11px;font-size:.6875rem;border:0;background:0 0;position:relative;-moz-transition:background .1s ease-in;-webkit-transition:background .1s ease-in;transition:background .1s ease-in}#nav-main .submenu li a,#nav-main .submenu li a:active,#nav-main .submenu li a:focus,#nav-main .submenu li a:hover,#nav-main .submenu li.hover a,#nav-main .submenu li.hover a:active,#nav-main .submenu li.hover a:focus,#nav-main .submenu li.hover a:hover{background:#e3ebf4;background:rgba(152,178,201,.2);-moz-transition:background .1s ease-out;-webkit-transition:background .1s ease-out;transition:background .1s ease-out}#nav-main .submenu hr{height:5px;margin:0 auto 5px;width:170px}html[dir=rtl] #nav-main .submenu{left:999em}#nav-mail ul li.current a,#nav-mail ul li.current a:link,#nav-mail ul li.current a:visited,#nav-mail ul li.current span{background:#fbfdff;padding-right:30px;padding-bottom:15px}#nav-mail ul li.current ul a,#nav-mail ul li.current ul a:link,#nav-mail ul li.current ul a:visited,#nav-mail ul li.current ul span{background:0 0;height:auto;padding:8px 10px}.darkbg #nav-main ul li a,.darkbg #nav-main ul li a:link,.darkbg #nav-main ul li a:visited,.darkbg #nav-main ul li span{color:#fff;border-color:#555}.darkbg #nav-main ul li li a,.darkbg #nav-main ul li li a:link,.darkbg #nav-main ul li li a:visited,.darkbg #nav-main ul li li span{color:#484848}.darkbg #nav-main ul li .hover a,.darkbg #nav-main ul li .hover a:link,.darkbg #nav-main ul li .hover a:visited,.darkbg #nav-main ul li a:hover,.darkbg #nav-main ul li:hover a{background:#ccc;color:#484848}@media only screen and (max-width:760px){#nav-main-menu{margin:15px 0 0 -10px}#nav-main-menu li.hover a[aria-haspopup=true]{background-image:none}#nav-main-menu .submenu,.js #nav-main li.hover .submenu{left:-999em;top:auto;background:#fff;border-radius:10px;box-shadow:0 2px 3px rgba(0,0,0,.35);opacity:1;padding:0}#nav-main-menu .submenu a,#nav-main-menu .submenu a:link,#nav-main-menu .submenu a:visited{-moz-transition:none 0s;-webkit-transition:none 0s;transition:none 0s}}.sky #outer-wrapper{background:#eaeff2;background:-webkit-gradient(radial,center center,0,center center,60%,color-stop(0,rgba(234,239,242,.9)),color-stop(60%,rgba(212,221,228,.5))),-webkit-linear-gradient(top,#cae1f4 0,rgba(125,185,232,0) 100%);background:-webkit-radial-gradient(center,ellipse cover,#eaeff2 0,rgba(212,221,228,.4) 60%),-webkit-linear-gradient(top,#cae1f4 0,rgba(125,185,232,0) 100%);background:-ms-radial-gradient(center,ellipse cover,#eaeff2 0,rgba(212,221,228,.5) 60%),-ms-linear-gradient(top,#cae1f4 0,rgba(125,185,232,0) 100%);background:radial-gradient(ellipse at center,#eaeff2 0,rgba(212,221,228,.5) 50%),linear-gradient(to bottom,#cae1f4 0,rgba(125,185,232,0) 100%)}.sky #outer-wrapper:after{z-index:0;content:"";position:absolute;top:0;bottom:0;width:100%;background:url("/media/img/thunderbird/landing/bg-noise.a087261e1aeb.png")}#wrapper{width:980px;padding:0 10px;z-index:1}#main-feature{margin-top:14px;padding-bottom:20px}#main-feature img{display:none}#main-feature h1.large{margin:12px 0;font-size:60px;font-size:3.75rem;text-align:center}#main-feature p.large{margin:12px 50px;font-size:28px;font-size:1.75rem;line-height:1.3;text-align:center}.download-button-wrapper{margin:50px auto 0;width:260px;text-align:center}.download-button-wrapper .linux-arm-download,.download-button-wrapper .unsupported-download{text-align:center}.sky #main-feature .download-button{position:static}html.android .download-button .unsupported-download,html.ios .download-button .unsupported-download,html.oldmac .download-button .unsupported-download,html.oldwin .download-button .unsupported-download,html.windows.arm .download-button .unsupported-download{display:block;margin:32px 0 0}#thunderbird-screenshot{margin:40px 20px 0;text-align:center}#thunderbird-screenshot .platform-img{vertical-align:bottom}#colophon{z-index:1}@media only screen and (min-width:760px) and (max-width:1000px){#wrapper{width:760px;padding:0}#main-feature h1.large{margin:12px 50px}#main-feature p.large{font-size:24px;font-size:1.5rem}}@media only screen and (max-width:760px){#wrapper{width:320px;padding:0}#masthead h2{display:none}#main-feature{margin:20px 10px 40px;padding:0}#main-feature img{display:block;margin:0 auto}#main-feature h1.large{margin:12px 0;font-size:36px;font-size:2.25rem;letter-spacing:-1px}#main-feature p.large{margin:12px 0;font-size:20px;font-size:1.25rem}#thunderbird-screenshot{display:none}}
+/****************************************************************************/
+/****************************************************************************/
+.sky #outer-wrapper {
+  background: #eaeff2;
+  background: -webkit-gradient(radial, center center, 0, center center, 60%, color-stop(0%, rgba(234, 239, 242, 0.9)), color-stop(60%, rgba(212, 221, 228, 0.5))), -webkit-linear-gradient(top, #cae1f4 0%, rgba(125, 185, 232, 0) 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, #eaeff2 0%, rgba(212, 221, 228, 0.4) 60%), -webkit-linear-gradient(top, #cae1f4 0%, rgba(125, 185, 232, 0) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, #eaeff2 0%, rgba(212, 221, 228, 0.5) 60%), -ms-linear-gradient(top, #cae1f4 0%, rgba(125, 185, 232, 0) 100%);
+  background: radial-gradient(ellipse at center, #eaeff2 0%, rgba(212, 221, 228, 0.5) 50%), linear-gradient(to bottom, #cae1f4 0%, rgba(125, 185, 232, 0) 100%);
+}
+.sky #outer-wrapper:after {
+  z-index: 0;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: url('/media/img/thunderbird/landing/bg-noise.png');
+}
+#wrapper {
+  width: 980px;
+  padding: 0 10px;
+  z-index: 1;
+}
+#main-feature {
+  margin-top: 14px;
+  padding-bottom: 20px;
+}
+#main-feature img {
+  display: none;
+}
+#main-feature h1.large {
+  margin: 12px 0;
+  font-size: 60px;
+  font-size: 3.75rem;
+  text-align: center;
+}
+#main-feature p.large {
+  margin: 12px 50px;
+  font-size: 28px;
+  font-size: 1.75rem;
+  line-height: 1.3;
+  text-align: center;
+}
+.download-button-wrapper {
+  margin: 50px auto 0;
+  width: 260px;
+  text-align: center;
+}
+.download-button-wrapper .unsupported-download,
+.download-button-wrapper .linux-arm-download {
+  text-align: center;
+}
+.sky #main-feature .download-button {
+  position: static;
+  /* override oldIE.css */
+}
+/* Unsupported platforms */
+html.windows.arm .download-button .unsupported-download,
+html.oldwin .download-button .unsupported-download,
+html.oldmac .download-button .unsupported-download,
+html.android .download-button .unsupported-download,
+html.ios .download-button .unsupported-download {
+  display: block;
+  margin: 32px 0 0;
+}
+#thunderbird-screenshot {
+  margin: 40px 20px 0;
+  text-align: center;
+}
+#thunderbird-screenshot .platform-img {
+  vertical-align: bottom;
+}
+#colophon {
+  z-index: 1;
+}
+/* Tablet Layout: 760px */
+@media only screen and (min-width: 760px) and (max-width: 1000px) {
+  #wrapper {
+    width: 760px;
+    padding: 0;
+  }
+  #main-feature h1.large {
+    margin: 12px 50px;
+  }
+  #main-feature p.large {
+    font-size: 24px;
+    font-size: 1.5rem;
+  }
+}
+/* Mobile layout: 320px */
+@media only screen and (max-width: 760px) {
+  #wrapper {
+    width: 320px;
+    padding: 0;
+  }
+  #masthead h2 {
+    display: none;
+  }
+  #main-feature {
+    margin: 20px 10px 40px;
+    padding: 0;
+  }
+  #main-feature img {
+    display: block;
+    margin: 0 auto;
+  }
+  #main-feature h1.large {
+    margin: 12px 0;
+    font-size: 36px;
+    font-size: 2.25rem;
+    letter-spacing: -1px;
+  }
+  #main-feature p.large {
+    margin: 12px 0;
+    font-size: 20px;
+    font-size: 1.25rem;
+  }
+  #thunderbird-screenshot {
+    display: none;
+  }
+}
