fix start page font-weight

--- a/site/media/css/start-style.css
+++ b/site/media/css/start-style.css
@@ -25,6 +25,7 @@ h2 {
   margin: 0;
   font-family: 'Open Sans Light', X-LocaleSpecific-Light, 'Open Sans', X-LocaleSpecific, sans-serif;
   font-weight: normal;
+  font-weight: 400;
 }
 main {
   position: relative;
