add functionality for the mozilla site footer for now

--- a/website/_includes/bedrock/base-resp.html
+++ b/website/_includes/bedrock/base-resp.html
@@ -128,6 +128,11 @@
       {# for newsletters not to be confined by #wrapper #}
       {% block email_form_unwrapped %}{% endblock %}
 
+      {% block site_footer %}
+          {% include '_includes/site-footer.html' %}
+      {% endblock %}
+
+
     </div><!-- close #outer-wrapper -->
 
     <!--[if IE 9]>
