Add Donate option to top menu.

--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -35,6 +35,11 @@
               {{_('Features')}}
             </a>
           </li>
+          <li>
+            <a href="{{ donate_url('header') }}" tabindex="-1">
+              {{_('Donate')}}
+            </a>
+          </li>
           <li class="last">
             <a href="{{ url('thunderbird.organizations') }}" tabindex="-1">
               {{_('Thunderbird for Organizations')}}
