--- a/website/_includes/download-button.html
+++ b/website/_includes/download-button.html
@@ -25,7 +25,7 @@
     {{ alt_buttons(builds) }}
   </div>
   <p class="unsupported-download">
-    {{ _("Your system doesn't meet the <a href=\"%(url)s\">requirements</a> to run Thunderbird.")|format(url=thunderbird_url('sysreq', channel)) }}
+    {{ _("Your system doesn't meet the <a href=\"%(url)s\">requirements</a> to run Thunderbird.")|format(url=thunderbird_url('system-requirements', channel)) }}
   </p>
   <p class="linux-arm-download">
     {{ _('Please follow <a href="%(url)s">these instructions</a> to install Thunderbird.')|format(url='https://support.mozilla.org/kb/installing-thunderbird-linux') }}
@@ -56,7 +56,7 @@
   <small class="download-other download-other-desktop os_linux os_linux64 os_osx os_win os_winsha1">
     <a href="{{ thunderbird_url('all', channel) }}">{{ _('Systems &amp; Languages') }}</a> |
     {% if channel != 'alpha' %}{# Earlybird release notes are not available yet #}
-    <a href="{{ thunderbird_url('notes', channel) }}">{{ _('What’s New') }}</a> |
+    <a href="{{ thunderbird_url('releasenotes', channel) }}">{{ _('What’s New') }}</a> |
     {% endif %}
     <a href="{{ url('privacy.notices.thunderbird') }}">{{ _('Privacy') }}</a>
   </small>
