--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -92,7 +92,7 @@
         <h3>{{ _('Try Thunderbird %s')|format(channel_name) }}</h3>
         <ol>
           <li class="try1">
-            <a href="/thunderbird/{{version}}/system-requirements/">
+            <a href="{{ url('thunderbird.sysreq', version) }}">
               {{ _('Check') }}
             </a>
           </li>
