Fix broken links on organizations page.

--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -70,7 +70,7 @@
         </ul>
       </li>
       <li class="last" id="nav-main-support">
-        <a href="https://support.mozilla.org/products/thunderbird/" tabindex="0">
+        <a href="{{ url('support') }}" tabindex="0">
           {{_('Support')}}
         </a>
       </li>
