Move Donate button onto main top nav menu.

--- a/assets/less/sandstone/sandstone-resp.less
+++ b/assets/less/sandstone/sandstone-resp.less
@@ -631,6 +631,11 @@ label.error {
         .font-size(13px);
         .open-sans;
 
+        #nav-main-donate a {
+            .open-sans-extrabold();
+            .font-size(15px);
+        }
+
         ul {
             margin-bottom: 0;
         }
