Fix Issue #44: Sidebar download links to release on beta release notes pages.

--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -97,8 +97,12 @@
             </a>
           </li>
           <li class="try2">
-            <a href="/">
-              {{ _('Download') }}
+            {% if 'b' in release.version %}
+              <a href="{{ url('thunderbird.channel') }}">
+            {% else %}
+              <a href="/">
+            {% endif %}
+            {{ _('Download') }}
             </a>
           </li>
           <li class="try3">
