Update AMO -> ATB URLs

--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -55,17 +55,17 @@
         </ul>
       </li>
       <li id="nav-main-addons">
-        <a href="https://addons.mozilla.org/thunderbird/" tabindex="0" aria-owns="nav-main-addons-submenu" aria-haspopup="true">
+        <a href="https://addons.thunderbird.net" tabindex="0" aria-owns="nav-main-addons-submenu" aria-haspopup="true">
           {{_('Add-ons')}}
         </a>
         <ul aria-expanded="false" id="nav-main-addons-submenu" class="submenu">
           <li class="first">
-            <a href="https://addons.mozilla.org/thunderbird/extensions/" tabindex="-1">
+            <a href="https://addons.thunderbird.net/extensions/" tabindex="-1">
               {{_('Add-ons')}}
             </a>
           </li>
           <li class="last">
-            <a href="https://addons.mozilla.org/thunderbird/themes/" tabindex="-1">
+            <a href="https://addons.thunderbird.net/themes/" tabindex="-1">
               {{_('Themes')}}
             </a>
           </li>
