--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="try4">
-            <a href="https://addons.mozilla.org/thunderbird/">
+            <a href="https://addons.thunderbird.net">
               {{ _('Customize') }}
             </a>
           </li>
