--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -13,7 +13,7 @@
           <div class="col col-2">
             <ul class="links-join">
               <li><a href="{{ url('mozorg.about') }}" data-link-type="footer" data-link-name="About">{{ _('About') }}</a></li>
-              <li class="wrap"><a href="{{ url('mozorg.contact.contact-landing') }}" data-link-type="footer" data-link-name="Contact Us">{{ _('Contact Us') }}</a></li>
+              <li class="wrap"><a href="{{ url('thunderbird.contact') }}" data-link-type="footer" data-link-name="Contact Us">{{ _('Contact Us') }}</a></li>
               <li class="wrap"><a href="{{ donate_url('footer') }}" class="donate" data-link-type="footer" data-link-name="Donate">{{ _('Donate') }}</a></li>
               <li class="clear"><a href="{{ url('contribute') }}" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></li>
             </ul>
