--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -19,6 +19,11 @@
 {% block site_header %}
   <header id="masthead">
 
+  {% block site_header_logo %}
+  <h2><a href="{{ url('thunderbird.index') }}">{{ high_res_img('thunderbird/template/logo-wordmark.png', {'alt':
+      'Thunderbird', 'width': '281', 'height': '66'}) }}</a></h2>
+  {% endblock %}
+
   {% block site_header_nav %}
   <nav id="nav-main" role="navigation">
     <span class="toggle" role="button" aria-controls="nav-main-menu" aria-expanded="false" tabindex="0">{{_('Menu')}}</span>
@@ -97,10 +102,6 @@
       </li>
     </ul>
   </nav>
-  {% endblock %}
-
-  {% block site_header_logo %}
-    <h2><a href="{{ url('thunderbird.index') }}">{{ high_res_img('thunderbird/template/logo-wordmark.png', {'alt': 'Thunderbird', 'width': '281', 'height': '66'}) }}</a></h2>
   {% endblock %}
 
   {% block alt_header %}{% endblock %}
