Add blog location to settings and changed the Contact Us nav to the Blog.

--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -84,9 +84,9 @@
         </li>
       {% endif %}
       {% if LANG.startswith('en-') %}
-        <li id="nav-main-contact">
-          <a href="{{ url('thunderbird.contact') }}" tabindex="0">
-            {{_('Contact Us')}}
+        <li id="nav-main-blog">
+          <a href="{{ url('blog') }}" tabindex="0">
+            {{_('Blog')}}
           </a>
         </li>
       {% endif %}
