--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -20,8 +20,7 @@
   <header id="masthead">
 
   {% block site_header_logo %}
-  <h2><a href="{{ url('thunderbird.index') }}">{{ high_res_img('thunderbird/template/logo-wordmark.png', {'alt':
-      'Thunderbird', 'width': '281', 'height': '66'}) }}</a></h2>
+    <h2><a href="{{ url('thunderbird.index') }}">{{ high_res_img('thunderbird/template/logo-wordmark.png', {'alt':'Thunderbird', 'width': '281', 'height': '66'}) }}</a></h2>
   {% endblock %}
 
   {% block site_header_nav %}
