Update release notes template for beta group subheadings.

--- a/assets/less/firefox/releasenotes.less
+++ b/assets/less/firefox/releasenotes.less
@@ -160,6 +160,10 @@ article {
     border-bottom: 1px solid #ddd;
     margin: 0 -@gridGutterWidth @baseLine;
     padding: @baseLine @gridGutterWidth;
+
+    > h4 {
+        margin-top: 30px;
+    }
 }
 
 .blueprint .notes-section {
