--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -48,43 +48,50 @@
     </header>
   {% endblock %}
 
-    <div class="main-column">
-      {% if new_features %}
-      <section class="notes-section" id="new-features">
-        <h3>{{ _('What’s New') }}</h3>
+  <div class="main-column">
+    {% if notes %}
+    <section class="notes-section" id="new-features">
+      <h3>{{ _('What’s New') }}</h3>
+      {% for group in range(release.groups|length) %}
+        {% if release.groups[group] %}
+          <h4>{{ release.groups[group] }}</h4>
+        {% endif %}
         <ul class="section-items tagged">
-          {% for note in new_features %}
-          <li {% if not note.tag %}class="untagged"{% endif %} id="note-{{ note.id }}">
-            {% if note.tag %}
-              <b class="tag tag-{{ note.tag.lower() }}">{{ note.tag }}</b>
-            {% endif %}
-              {{ note.note|markdown|safe }}
-          </li>
-          {% endfor %}
-        </ul>
-      </section>
-      {% endif %}
-      {% if known_issues %}
-      <section class="notes-section" id="known-issues">
-        <h3>{{ _('Known Issues') }}</h3>
-        <ul class="section-items tagged">
-          {% for note in known_issues %}
-            <li id="note-{{ note.id }}">
-              <b class="tag tag-unresolved">{{ _('unresolved') }}</b>
-              {{ note.note|markdown|safe }}
-            {% if note.fixed_in_release %}
-              <p class="note">
-                <a href="{{ releasenotes_url(note.fixed_in_release) }}">
-                  {{ _('Resolved in v{version_number}')|f(version_number=note.fixed_in_release.version) }}
-                </a>
-              </p>
-            {% endif %}
+          {% for note in notes %}
+          {% if note.get('group', 1)-1 == group and note.tag != 'unresolved' %}
+            <li {% if not note.tag %}class="untagged"{% endif %} id="note-{{ note.id }}">
+              {% if note.tag %}
+                <b class="tag tag-{{ note.tag.lower() }}">{{ note.tag }}</b>
+              {% endif %}
+                {{ note.note|markdown|safe }}
             </li>
+          {% endif %}
           {% endfor %}
         </ul>
-      </section>
-      {% endif %}
-    </div>
+      {% endfor %}
+    </section>
+    {% endif %}
+    {% if known_issues %}
+    <section class="notes-section" id="known-issues">
+      <h3>{{ _('Known Issues') }}</h3>
+      <ul class="section-items tagged">
+        {% for note in known_issues %}
+          <li id="note-{{ note.id }}">
+            <b class="tag tag-unresolved">{{ _('unresolved') }}</b>
+            {{ note.note|markdown|safe }}
+          {% if note.fixed_in_release %}
+            <p class="note">
+              <a href="{{ releasenotes_url(note.fixed_in_release) }}">
+                {{ _('Resolved in v{version_number}')|f(version_number=note.fixed_in_release.version) }}
+              </a>
+            </p>
+          {% endif %}
+          </li>
+        {% endfor %}
+      </ul>
+    </section>
+    {% endif %}
+  </div>
 
   {% block notes_sidebar %}
     <aside id="sidebar" class="sidebar">
